# demo-scene

./: .gitignore  README.md  greptimedb-common.yml
.github/scripts/: release-patch.sh
.github/workflows/: bump-patch-version.yml  lint.yml
cloudflare-workers/: .env.example  DEPLOY.md  README.md  docker-compose.yml  init-schema.sh  queries.sql  schema.sql
cloudflare-workers/worker/: .dockerignore  .gitignore  Dockerfile  README.md  package-lock.json  package.json  tsconfig.json  wrangler.toml
datadog-agent-migration/: docker-compose.yml  vector.toml
dify-monitoring/: .gitignore  README.md  dify-compose-override.yml  docker-compose.yml  flows.sql  init-flow.sh  otel-collector-config.yaml  setup.sh  teardown.sh
dify-monitoring/load-generator/: Dockerfile  main.py  requirements.txt
elasticsearch-ingestion/: README.md  docker-compose.yaml
elasticsearch-ingestion/nginx-log-generator/: app.py
enterprise-dashboard/: .gitignore  README.md  run-enterprise-dashboard.sh
enterprise-dashboard/deploy-utils/: Dockerfile
ev-open-telemetry/: .gitignore  README.md  docker-compose.yml  greptime_ds.yml.tpl
ev-open-telemetry/ev_observer/: Dockerfile  main.py  pyproject.toml
ev-open-telemetry/ev_observer/ev_observer/: __init__.py  metrics.py  vehicle.py
ev-open-telemetry/grafana/: Dockerfile
flight-data-ingester/: README.md  docker-compose.yml
flink-ingestion/: README.md  docker-compose.yml
genai-observability/: README.md  docker-compose.yml  flows.sql  init-flow.sh  otel-collector-config.yaml
grafana-alloy/: .gitignore  README.md  config.alloy.tpl  docker-compose.yml  greptime.env.sample  prometheus.yml.tpl
influxdb-lineprotocol/: .env.example  .gitignore  README.md  ingest.py  requirements.txt
influxdb-v1-to-greptime/: README.md
influxdb-v2-to-greptime/: README.md
kafka-ingestion/: README.md  docker-compose.yml
kafka-log/: README.md  docker-compose.yml
kafka-log/producer/: Dockerfile  (+1 more)
keyboard-monitor/: .env.example  README.md  agent.py  display.py  requirements.txt
log-benchmark/: README.md
nginx-log-metrics/: README.md  docker-compose.yml
node-exporter/: .gitignore  README.md  docker-compose.yml  prometheus.yml.tpl
ollama-opentelemetry/: README.md  docker-compose.yml  dockerfile  joke.py  otel-collector-config.yaml  pyproject.toml  requirements.txt
opentelemetry-trace-django/: README.md  docker-compose.yml
opentelemetry-trace-django/django-app/: .dockerignore  pyproject.toml
opentelemetry-trace-django/django-app/myapp/: admin.py  models.py  serializers.py  views.py
opentelemetry-trace-django/django-app/myapp/migrations/: 0001_initial.py
opentelemetry-trace-django/todo-client/: .gitignore  Dockerfile  pyproject.toml
opentelemetry-trace-django/todo-client/src/todo_client/: __init__.py
postgres-fdw/: .gitignore  README.md  docker-compose.yml  vector.toml
self-hosted-game-analytics/: .gitignore  README.md  docker-compose.yml
telegraf-ingestion/: README.md  telegraf.conf
vector-ingestion/: README.md  docker-compose.yml  example.toml  example.toml.tpl  greptime.env.sample  pipeline.yaml  start.env  start.sh
vector-type-search/: docker-compose.yml  get_started.ipynb  search_image.ipynb  search_image_large.ipynb
wide-events-django/: README.md  docker-compose.yml  init.sql
wide-events-django/todo-client/: Dockerfile  README.md  pyproject.toml
wide-events-django/todo-client/src/todo_client/: __init__.py
(+103 files in other folders)
